--- a/views/index.erb
+++ b/views/index.erb
@@ -6,13 +6,21 @@
       <p>Hi! I'm a software geek with a passion for cars and shiny things. Currently working
       as a Lead Web Developer for Pure360 in Brighton.<p>
       <div class="links">
-        <span><a href="#">Skills</a></span>
+        <span><a href="#" id="skills">Skills</a></span>
         <span><a href="#">CV</a></span>
         <span><a href="#">Contact</a></span>
       </div>
     </section>
     <div class="social-links">
-      <a href=#">SL</a>
+      <ul>
+        <li><a href=#">SL</a></li>
+        <li><a href=#">SL</a></li>
+        <li><a href=#">SL</a></li>
+      </ul>
     </div>
   </div>
 </article>
+
+<div class="skills-container">
+  <p>I got skillz</p>
+</div>
