--- a/views/index.erb
+++ b/views/index.erb
@@ -1,6 +1,6 @@
 <article class="welcome">
   <div class="content">
-    <img src="http://www.juco.co.uk/assets/me-50e1039deda02638510417cf00a9ed64.jpg" class="me" />
+    <img src="me.jpg" class="me" />
     <section>
       <header>Julian Cohen</header>
       <p>Hi! I'm a software geek with a passion for cars and shiny things. Currently working
@@ -21,6 +21,6 @@
   </div>
 </article>
 
-<div class="skills-container">
+<div class="skills-container ">
   <p>I got skillz</p>
 </div>
