--- a/css/style.scss
+++ b/css/style.scss
@@ -1,4 +1,10 @@
+@import "compass"
+
+@mixin foo {
+  background-color: rgba(255, 255, 255, 0.75);
+}
 html, body {
+  @include foo;
   width: 100%;
   margin: 0;
 }
@@ -21,6 +27,7 @@ article.welcome {
   position: absolute;
   bottom: 0;
   width: 100%;
+  height: 30%;
   background-color: rgba(255,255,255,0.75);
 
   div.content {
@@ -65,5 +72,14 @@ article.welcome {
 }
 
 .skills-container {
-  display: none;
+  position: fixed;
+  width: 75%;
+  left: 50%;
+  height: 70%;
+  margin: 0 0 0 -38%;
+  background-color: rgba(255, 255, 255, 0.75);
+
+  &.hidden {
+    display: none;
+  }
 }
