--- a/views/layout.erb
+++ b/views/layout.erb
@@ -8,5 +8,5 @@
       <%= yield %>
     </div>
   </body>
-  <script type="text/javascript" src="/app.js"></script>
+  <script type="text/javascript" src="/javascripts/test.js"></script>
 </html>
