--- a/css/style.scss
+++ b/css/style.scss
@@ -37,6 +37,8 @@ article.welcome {
       }
 
       .links {
+        text-align: center;
+
         span {
           margin: 0px 10px 0px 0px;
         }
