--- a/views/index.erb
+++ b/views/index.erb
@@ -4,7 +4,8 @@
   <div class="content">
     <img src="me.jpg" class="me" />
     <section>
-      <header>Julian Cohen</header>
+      <img src="/logo.png" class="logo" />
+      <%#<header>Julian Cohen</header>%>
       <p>A software geek with a passion for cars and shiny things. Currently working
       as a Lead Web Developer for Pure360 in Brighton.<p>
       <div class="links">
@@ -23,6 +24,11 @@
         <li>
           <a href="http://github.com/juco" target="_blank">
             <svg class="icon icon-github" viewBox="0 0 32 32"><use xlink:href="#icon-github"></use></svg>
+          </a>
+        </li>
+        <li>
+          <a href="http://stackoverflow.com" target="_blank" class="stackoverflow-icon">
+            <img src="/stackoverflow.png" class="icon" />
           </a>
         </li>
         <li>
