--- a/views/layout.erb
+++ b/views/layout.erb
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>Foo</title>
+    <title>Julian Cohen</title>
     <link rel="stylesheet" href="/css/style.css">
   </head>
   <body>
