--- a/css/style.scss
+++ b/css/style.scss
@@ -97,3 +97,14 @@ article.welcome {
 .icon {
   width: 30px;
 }
+
+.stackoverflow-icon {
+  background-imgage: URL('/stackoverflow.png');
+  background-repeat: no-repeat;
+  background-size: auto;
+  height: 30px;
+}
+
+.logo {
+  width: 180px;
+}
