Tinkered with article height & padding

--- a/views/index.erb
+++ b/views/index.erb
@@ -2,12 +2,13 @@
 
 <article class="welcome">
   <div class="content">
-    <img src="me.jpg" class="me" />
     <section>
+      <img src="me.jpg" class="me" />
       <img src="/logo.png" class="logo" />
       <%#<header>Julian Cohen</header>%>
       <p>A software geek with a passion for cars and shiny things. Currently working
       as a Lead Web Developer for Pure360 in Brighton.<p>
+      <p>Some more content here, blah blah blah</p>
       <div class="links">
         <span><a href="#" id="skills">Skills</a></span>
         <span><a href="#">CV</a></span>
