--- a/css/style.scss
+++ b/css/style.scss
@@ -1,4 +1,5 @@
-$blue: #5CB8E6;
+$secondaryColor: #5CB8E6;
+$transparent: rgba(255, 255, 255, 0.75);
 
 html, body {
   width: 100%;
@@ -9,7 +10,7 @@ body {
   font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
 
   a {
-    color: $blue;
+    color: $secondaryColor;
     font-size: 15px;
   }
 }
@@ -23,15 +24,13 @@ body {
 article.welcome {
   position: absolute;
   bottom: 0;
-  width: 100%;
-  height: 30%;
-  background-color: rgba(255,255,255,0.75);
+  width: 95%;
+  min-height: 25%;
+  padding: 2.5%;
+  background-color: $transparent;
 
   div.content {
-    padding: 30px;
-
     section {
-      padding: 10px;
       margin-right: 30px;
 
       header {
@@ -51,14 +50,14 @@ article.welcome {
     .social-links {
       position: absolute;
       right: 20px;
-      top: 25px;
+      top: 0;
 
       ul {
         list-style: none;
 
         a {
           &:hover {
-            fill: $blue;
+            fill: $secondaryColor;
           }
         }
       }
@@ -80,7 +79,7 @@ article.welcome {
   left: 50%;
   height: 70%;
   margin: 0 0 0 -38%;
-  background-color: rgba(255, 255, 255, 0.75);
+  background-color: $transparent;
 
   &.hidden {
     display: none;
@@ -95,7 +94,7 @@ article.welcome {
 
 /* General styles (should be moved) */
 .icon {
-  width: 30px;
+  width: 23px;
 }
 
 .stackoverflow-icon {
