--- a/views/index.erb
+++ b/views/index.erb
@@ -51,8 +51,85 @@
 </article>
 
 <div class="skills-container hidden">
-  <p>I got skillz</p>
   <a href="#" id="close-skills" id="close-skills">
     <svg class="icon icon-cross cancel-icon" viewBox="0 0 32 32"><use xlink:href="#icon-cross"></use></svg>
   </a>
+  <div class="matrix">
+    <dl>
+      <dt>Ruby (on rails)</dt>
+      <dd>
+        <div class="skill-bar">
+          <div class="skill ruby"></div>
+        </div>
+      </dd>
+
+      <dt>PHP</dt>
+      <dd>
+        <div class="skill-bar">
+          <div class="skill php"></div>
+        </div>
+      </dd>
+
+      <dt>Linux / Unix / OS X</dt>
+      <dd>
+        <div class="skill-bar">
+          <div class="skill unix"></div>
+        </div>
+      </dd>
+
+      <dt>Javascript / Coffeescript / Node</dt>
+      <dd>
+        <div class="skill-bar">
+          <div class="skill javascript"></div>
+        </div>
+      </dd>
+
+      <dt>Angular JS</dt>
+      <dd>
+        <div class="skill-bar">
+          <div class="skill angular"></div>
+        </div>
+      </dd>
+
+      <dt>Backbone JS</dt>
+      <dd>
+        <div class="skill-bar">
+          <div class="skill angular"></div>
+        </div>
+      </dd>
+
+      <dt>CSS (Sass, Less)</dt>
+      <dd>
+        <div class="skill-bar">
+          <div class="skill css"></div>
+        </div>
+      </dd>
+
+      <dt>Testing (PHPUnit, Rspec, Jasmine)</dt>
+      <dd>
+        <div class="skill-bar">
+          <div class="skill testing"></div>
+        </div>
+      </dd>
+
+      <dt>Java</dt>
+      <dd>
+        <div class="skill-bar">
+          <div class="skill java"></div>
+        </div>
+      </dd>
+    </dl>
+  </div>
+
+  <div class="additions">
+    <h3>and these:</h3>
+    <ul>
+      <li>Agile (Scrum, Kanban)</li>
+      <li>Git, Subversion, CVS</li>
+      <li>Continuous Integration (Travis, Jenkins)</li>
+      <li>Node JS</li>
+      <li>Capistrano</li>
+      <li>Composer</li>
+    </ul>
+  </div>
 </div>
