--- a/views/index.erb
+++ b/views/index.erb
@@ -28,7 +28,8 @@
       </li>
       <li>
         <a href="http://stackoverflow.com" target="_blank" class="stackoverflow-icon">
-          <img src="/stackoverflow.png" class="icon" />
+          <%#<img src="/stackoverflow.png" class="icon" />%>
+          <svg class="icon icon-stack" viewBox="0 0 32 32"><use xlink:href="#icon-stack"></use></svg>
         </a>
       </li>
       <li>
