Deployment with capistrano

--- a/views/index.erb
+++ b/views/index.erb
@@ -4,7 +4,6 @@
   <section>
     <img src="me.jpg" class="me" />
     <img src="/logo.png" class="logo" />
-    <%#<header>Julian Cohen</header>%>
     <p>A software geek with a passion for cars and shiny things. Currently working
     as a Lead Web Developer for Pure360 in Brighton.<p>
     <p>Some more content here, blah blah blah</p>
@@ -52,7 +51,7 @@
 </article>
 
 <div class="skills-container hidden">
-  <a href="#" id="close-skills" id="close-skills">
+  <a href="#" id="close-skills" class="cancel-link">
     <svg class="icon icon-cross cancel-icon" viewBox="0 0 32 32"><use xlink:href="#icon-cross"></use></svg>
   </a>
   <div class="matrix">
