--- a/css/style.scss
+++ b/css/style.scss
@@ -119,10 +119,11 @@ article.welcome {
     display: none;
   }
 
-  .cancel-icon {
+  .cancel-link {
     position: absolute;
     right: 5;
     top: 5;
+    height: 25px;
   }
 
   dt {
@@ -194,6 +195,7 @@ article.welcome {
 /* General styles (should be moved) */
 .icon {
   width: 23px;
+  height: 20px;
   margin-bottom: 2px;
 }
 
