--- a/views/index.erb
+++ b/views/index.erb
@@ -16,7 +16,7 @@
   <div class="social-links">
     <ul>
       <li>
-        <a href="http://linkedin.com" target="_blank">
+        <a href="http://uk.linkedin.com/in/cohenjulian/" target="_blank">
           <svg class="icon icon-linkedin" viewBox="0 0 32 32"><use xlink:href="#icon-linkedin"></use></svg>
         </a>
       </li>
@@ -26,18 +26,17 @@
         </a>
       </li>
       <li>
-        <a href="http://stackoverflow.com" target="_blank" class="stackoverflow-icon">
-          <%#<img src="/stackoverflow.png" class="icon" />%>
+        <a href="http://stackoverflow.com/users/1477466/juco" target="_blank" class="stackoverflow-icon">
           <svg class="icon icon-stack" viewBox="0 0 32 32"><use xlink:href="#icon-stack"></use></svg>
         </a>
       </li>
       <li>
-        <a href="https://plus.google.com/+JulianCohen1/posts">
+        <a href="https://plus.google.com/+JulianCohen1/posts" target="_blank">
           <svg class="icon icon-googleplus" viewBox="0 0 32 32"><use xlink:href="#icon-googleplus"></use></svg>
         </a>
       </li>
       <li>
-        <a href="https://www.facebook.com/julian.cohen.5">
+        <a href="https://www.facebook.com/julian.cohen.5" target="_blank">
           <svg class="icon icon-facebook" viewBox="0 0 32 32"><use xlink:href="#icon-facebook"></use></svg></li>
         </a>
       </li>
