--- a/views/layout.erb
+++ b/views/layout.erb
@@ -1,7 +1,9 @@
+<!doctype html>
 <html>
   <head>
     <title>Julian Cohen</title>
     <link rel="stylesheet" href="/css/style.css">
+    <meta name="viewport" content="width=device-width, user-scalable=no">
   </head>
   <body>
     <div class="container">
