--- a/css/style.scss
+++ b/css/style.scss
@@ -120,11 +120,9 @@ article.welcome {
     display: none;
   }
 
-  .cancel-link {
-    position: absolute;
-    right: 5;
-    top: 5;
-    height: 25px;
+  div.actions {
+    text-align: right;
+    padding: 0 10px 0 10px
   }
 
   dt {
