--- a/views/index.erb
+++ b/views/index.erb
@@ -50,9 +50,11 @@
 </article>
 
 <div class="skills-container hidden">
-  <a href="#" id="close-skills" class="cancel-link">
-    <svg class="icon icon-cross cancel-icon" viewBox="0 0 32 32"><use xlink:href="#icon-cross"></use></svg>
-  </a>
+  <div class="actions">
+    <a href="#" id="close-skills" class="cancel-link">
+      <svg class="icon icon-cross cancel-icon" viewBox="0 0 32 32"><use xlink:href="#icon-cross"></use></svg>
+    </a>
+  </div>
   <div class="matrix">
     <dl>
       <dt>Ruby (on rails)</dt>
