--- a/css/style.scss
+++ b/css/style.scss
@@ -12,6 +12,9 @@ $skillBackbone: 80%;
 $skillTesting: 60%;
 $skillJava: 30%;
 
+/* Screen sizes */
+$iphoneScreenSize: 768px;
+
 html, body {
   width: 100%;
   margin: 0;
@@ -129,12 +132,22 @@ article.welcome {
     float: left;
     clear: left;
     width: 40%;
-    margin-bottom: 30px;
+
+    @media (max-width: $iphoneScreenSize) {
+      width: 100%;
+      margin-bottom: 5px;
+      text-align: center;
+    }
   }
 
   dd {
     float: left;
     width: 50%;
+    margin-bottom: 30px;
+
+    @media (max-width: $iphoneScreenSize) {
+      width: 100%;
+    }
   }
 
   .skill-bar {
