--- a/views/index.erb
+++ b/views/index.erb
@@ -4,8 +4,8 @@
   <section>
     <img src="me.jpg" class="me" />
     <img src="/logo.png" class="logo" />
-    <p>A software geek with a passion for cars and shiny things. Currently working
-    as a Lead Web Developer for Pure360 in Brighton.<p>
+    <p>A full-stack developer with a love of cars and animals. Currently working
+    as the Lead Developer at <a href="http://www.pure360.com">Pure360</a>.<p>
     <p>Some more content here, blah blah blah</p>
     <div class="links">
       <span><a href="#" id="skills">Skills</a></span>
@@ -17,31 +17,37 @@
     <ul>
       <li>
         <a href="http://uk.linkedin.com/in/cohenjulian/" target="_blank">
+          <span class="link-description">Linkedin</span>
           <svg class="icon icon-linkedin" viewBox="0 0 32 32"><use xlink:href="#icon-linkedin"></use></svg>
         </a>
       </li>
       <li>
         <a href="http://github.com/juco" target="_blank">
+          <span class="link-description">Github</span>
           <svg class="icon icon-github" viewBox="0 0 32 32"><use xlink:href="#icon-github"></use></svg>
         </a>
       </li>
       <li>
         <a href="http://stackoverflow.com/users/1477466/juco" target="_blank" class="stackoverflow-icon">
+          <span class="link-description">Stack overflow</span>
           <svg class="icon icon-stack" viewBox="0 0 32 32"><use xlink:href="#icon-stack"></use></svg>
         </a>
       </li>
       <li>
         <a href="https://plus.google.com/+JulianCohen1/posts" target="_blank">
+          <span class="link-description">Google+</span>
           <svg class="icon icon-googleplus" viewBox="0 0 32 32"><use xlink:href="#icon-googleplus"></use></svg>
         </a>
       </li>
       <li>
         <a href="https://www.facebook.com/julian.cohen.5" target="_blank">
+          <span class="link-description">Facebook</span>
           <svg class="icon icon-facebook" viewBox="0 0 32 32"><use xlink:href="#icon-facebook"></use></svg></li>
         </a>
       </li>
       <li>
         <a href="http://twitter.com/juc0" target="_blank">
+          <span class="link-description">Twitter</span>
           <svg class="icon icon-twitter" viewBox="0 0 32 32"><use xlink:href="#icon-twitter"></use></svg>
         </a>
       </li>
