--- a/views/index.erb
+++ b/views/index.erb
@@ -8,9 +8,9 @@
     as the Lead Developer at <a href="http://www.pure360.com">Pure360</a>.<p>
     <p>Some more content here, blah blah blah</p>
     <div class="links">
-      <span><a href="#" id="skills">Skills</a></span>
+      <span><a href="#" class="show-skills">Skills</a></span>
       <span><a href="#">CV</a></span>
-      <span><a href="#" id="contact">Contact</a></span>
+      <span><a href="#" class="show-contact">Contact</a></span>
     </div>
   </section>
   <div class="social-links">
@@ -56,11 +56,7 @@
 </article>
 
 <div class="skills-container hidden">
-  <div class="actions">
-    <a href="#" id="close-skills" class="cancel-link">
-      <svg class="icon icon-cross cancel-icon" viewBox="0 0 32 32"><use xlink:href="#icon-cross"></use></svg>
-    </a>
-  </div>
+  <%= erb :_container_actions %>
   <div class="matrix">
     <dl>
       <dt>Ruby (on rails)</dt>
@@ -135,10 +131,11 @@
 </div>
 
 <div class="contact-container hidden">
+  <%= erb :_container_actions %>
   <form method="post" action="/contact">
-    <input type="text" name="name" paceholder="Your name" />
-    <input type="text" name="email" placeholder="Email address" />
-    <textarea name="message"></textarea>
-    <input type="submit" value="Send" />
+    <input type="text" name="name" placeholder="Your name" class="form-field-text" />
+    <input type="text" name="email" placeholder="Email address" class="form-field-text" />
+    <textarea name="message" class="form-field-textarea"></textarea>
+    <input type="submit" value="Send" class="submit" />
   </form>
 </div>
