--- a/css/style.scss
+++ b/css/style.scss
@@ -1,4 +1,5 @@
 $secondaryColor: #5CB8E6;
+$buttonColor: #2FA4E7;
 $transparent: rgba(255, 255, 255, 0.75);
 $superTransparent: rgba(255, 255, 255, 0.55);
 
@@ -230,13 +231,24 @@ article.welcome {
 
   .submit {
     @include center();
-    width: 90px;
-    height: 20px;
   }
 }
 
 .hidden {
   display: none;
+}
+
+.btn-primary {
+  width: 90px;
+  height: 30px;
+  color: #fff;
+  background-color: $buttonColor;
+  background-image: webkit-linear-gradient(#54b4eb, #2fa4e7 60%, #1d9ce5);
+  background-image: linear-gradient(#54b4eb, #2fa4e7 60%, #1d9ce5);
+  padding: 3px 10px;
+  border-radius: 4px;
+  border: 1px solid transparent;
+  vertical-align: middle;
 }
 
 /* General styles (should be moved) */
