--- a/views/index.erb
+++ b/views/index.erb
@@ -132,10 +132,11 @@
 
 <div class="contact-container hidden">
   <%= erb :_container_actions %>
+  <h2>Got something to say?</h2>
   <form method="post" action="/contact">
     <input type="text" name="name" placeholder="Your name" class="form-field-text" />
     <input type="text" name="email" placeholder="Email address" class="form-field-text" />
     <textarea name="message" class="form-field-textarea"></textarea>
-    <input type="submit" value="Send" class="submit" />
+    <input type="submit" value="Send" class="submit btn-primary" />
   </form>
 </div>
