Thank you on contact

--- a/css/style.scss
+++ b/css/style.scss
@@ -234,6 +234,13 @@ article.welcome {
   }
 }
 
+.thanks {
+  width: 100%;
+  color: #fff;
+  text-align: center;
+  background: $secondaryColor;
+}
+
 .hidden {
   display: none;
 }
