--- a/views/index.erb
+++ b/views/index.erb
@@ -152,8 +152,8 @@
       class="form-field-text" />
     <textarea
       name="message"
-      class="form-field-textarea"
-      placeholder="Message...">
+      placeholder="Message..."
+      class="form-field-textarea">
     </textarea>
     <input type="submit" value="Send" class="submit btn-primary" />
   </form>
