Hack for missing CV

--- a/views/index.erb
+++ b/views/index.erb
@@ -21,7 +21,7 @@
     </p>
     <div class="links">
       <span><a href="#" class="show-skills">Skills</a></span>
-      <span><a href="#">CV</a></span>
+      <span><a href="#" class="show-cv">CV</a></span>
       <span><a href="#" class="show-contact">Contact</a></span>
     </div>
   </section>
