--- a/views/index.erb
+++ b/views/index.erb
@@ -11,7 +11,7 @@
     <img src="me.jpg" class="me" />
     <img src="/logo.png" class="logo" />
     <p>
-      A full-stack developer currently fulfilling the role of the Lead Developer at
+      A full-stack developer currently fulfilling the role of Lead Developer at
       <a href="http://www.pure360.com">Pure360</a>.
     </p>
     <p>
