--- a/views/index.erb
+++ b/views/index.erb
@@ -17,7 +17,7 @@
     <p>
       At present I am travelling the world and will likely be boring people with
       photos on my <a href="http://twitter.com/juc0" target="_blank">twitter</a> and
-      <a href="http://juc0.tumblr.com" target="_blank">tumblr</a>
+      <a href="http://juc0.tumblr.com" target="_blank">tumblr</a>.
     </p>
     <div class="links">
       <span><a href="#" class="show-skills">Skills</a></span>
