No longer travelling :(

--- a/views/index.erb
+++ b/views/index.erb
@@ -11,17 +11,15 @@
     <img src="me.jpg" class="me" />
     <img src="/logo.png" class="logo" />
     <p>
-      A full-stack developer currently fulfilling the role of Lead Developer at
+      A full-stack developer fulfilling the role of Lead Developer at
       <a href="http://www.pure360.com">Pure360</a>.
     </p>
     <p>
-      At present I am travelling the world and will likely be boring people with
-      photos on my <a href="http://twitter.com/juc0" target="_blank">twitter</a> and
-      <a href="http://juc0.tumblr.com" target="_blank">tumblr</a>.
+      Currently living in Brighton and primarily interested in Ruby and Javascript.
     </p>
     <div class="links">
       <span><a href="#" class="show-skills">Skills</a></span>
-      <span><a href="#" class="show-cv">CV</a></span>
+      <span><a target="_blank" href="https://docs.google.com/a/juco.co.uk/document/d/1a7W6aC6LVHAsCtnJrKm1tj6VSgVyca4lcRc-EupzPug/edit?usp=sharing" class="show-cv">CV</a></span>
       <span><a href="#" class="show-contact">Contact</a></span>
     </div>
   </section>
