--- a/views/_container_actions.erb
+++ b/views/_container_actions.erb
@@ -1,4 +1,4 @@
-<div class="actions">
+<div class="modal-actions">
   <a href="#" class="cancel-link">
     <svg class="icon icon-cross cancel-icon" viewBox="0 0 32 32">
       <use xlink:href="#icon-cross"></use>
