--- a/views/index.erb
+++ b/views/index.erb
@@ -1,7 +1,7 @@
 <%= erb :_svg %>
 
 <% if params[:thank] %>
-  <div class="thanks">
+  <div class="notification">
     Thank you! I will be in touch soon.
   </div>
 <% end %>
