--- a/css/style.scss
+++ b/css/style.scss
@@ -1,19 +1,18 @@
 $color-primary: #5CB8E6;
 $color-secondary: #2FA4E7;
+$color-font-alt: #FFF;
+$font-size-href: 15px;
+
 $transparent: rgba(255, 255, 255, 0.75);
 $transparent-super: rgba(255, 255, 255, 0.55);
 
 $logo-width: 180px;
-
-$font-size-href: 15px;
-
 $icon-width: 23px;
 $icon-height: 20px;
 $icon-margin: 2px;
 
 $button-width: 90px;
 $button-height: 30px;
-$button-color: #fff;
 $button-padding: 3px 10px;
 
 /* Skill percentages */
@@ -95,7 +94,7 @@ h2 {
 .btn-primary {
   width: $button-width;
   height: $button-height;
-  color: $button-color;
+  color: $color-font-alt;
   background-color: $color-secondary;
   background-image: webkit-linear-gradient(#54b4eb, #2fa4e7 60%, #1d9ce5);
   background-image: linear-gradient(#54b4eb, #2fa4e7 60%, #1d9ce5);
@@ -125,11 +124,6 @@ article.welcome {
   section {
     flex-grow: 1;
 
-    header {
-      font-wight: bold;
-      font-size: 30px;
-    }
-
     .links {
       text-align: center;
 
@@ -154,12 +148,16 @@ article.welcome {
       .link-description {
         display: none;
       }
-
-      @media (max-width: $breakpoint-sm) {
-        position: fixed;
-        top: 0;
-        left: 0;
-        list-style-type: none;
+    }
+    
+    @media (max-width: $breakpoint-sm) {
+      position: fixed;
+      top: 0;
+      left: 0;
+      padding: 10px;
+      list-style-type: none;
+      ul {
+        padding: 0;
         li {
           display: inline;
         }
@@ -278,9 +276,9 @@ article.welcome {
   }
 }
 
-.thanks {
+.notification {
   width: 100%;
-  color: #fff;
+  color: $color-font-alt;
   text-align: center;
   background: $color-primary;
 }
